--- a/src/app/modules/basic-form/basic-form.component.html
+++ b/src/app/modules/basic-form/basic-form.component.html
@@ -1,85 +1,66 @@
+<mat-card class=" example-card">
 <form [formGroup]="form" (ngSubmit)="save($event)">
   <div formGroupName="fullName">
-    <p>
-      Name: {{nameField.valid}}
-      <input
-      [class.is-valid]="isNameFieldValid"
-      [class.is-invalid]="isNameFieldInvalid"
-      type="text"
-      formControlName="name">
-      <button [disabled]="nameField.invalid" (click)="getNameValue()">Get Value</button>
-      <!-- <code>
-        <pre>{{nameField | json}}</pre>
-      </code> -->
-    </p>
-    <div class="messages" [class.active]="isNameFieldInvalid">
-    <p>
-      <strong *ngIf="nameField.hasError('required') ">Este campo es requerido</strong>
-    </p>
-    <p>
-      <strong *ngIf="nameField.hasError('maxlength') ">Debe tener maximo 10 caracteres</strong>
-    </p>
-    <p>
-      <strong *ngIf="nameField.hasError('pattern') ">No debe tener caracteres especiales</strong>
-    </p>
-    </div>
-    <p>
-      Last: {{lastField.valid}}
-      <input
-      type="text"
-      formControlName="last">
-      <button [disabled]="lastField.invalid" (click)="getNameValue()">Get Value</button>
-      <!-- <code>
-        <pre>{{nameField | json}}</pre>
-      </code> -->
-    </p>
+    <mat-form-field appearance="fill">
+      <mat-label>{{nameField.value}}</mat-label>
+      <input matInput type="text" formControlName="name">
+      <mat-icon matSuffix *ngIf="isNameFieldValid">done</mat-icon>
+      <mat-icon matSuffix *ngIf="isNameFieldInvalid">close</mat-icon>
+      <mat-error *ngIf="nameField.hasError('required') ">Este campo es requerido</mat-error>
+      <mat-error *ngIf="nameField.hasError('maxlength') ">Debe tener maximo 10 caracteres</mat-error>
+      <mat-error *ngIf="nameField.hasError('pattern') ">No debe tener caracteres especiales</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>{{lastField.value}}</mat-label>
+      <input matInput type="text" formControlName="last">
+      <mat-icon matSuffix *ngIf="isLastFieldValid">done</mat-icon>
+      <mat-icon matSuffix *ngIf="isLastFieldInvalid">close</mat-icon>
+      <mat-error *ngIf="lastField.hasError('required')" >Este campo es requerido</mat-error>
+      <mat-error *ngIf="lastField.hasError('maxlength') ">Debe tener maximo 10 caracteres</mat-error>
+      <mat-error *ngIf="lastField.hasError('pattern') ">No debe tener caracteres especiales</mat-error>
+    </mat-form-field>
   </div>
 
-  <p>
-    Email: {{emailField.value}}
-    <input type="email" formControlName="email">
-  </p>
-    <div class="messages" [class.active]="emailField.touched && emailField.invalid">
-    <p>
-      <strong *ngIf="emailField.hasError('required') ">Este campo es requerido</strong>
-    </p>
-    <p>
-      <strong *ngIf="emailField.hasError('email') ">El correo es inválido</strong>
-    </p>
-    </div>
-  <p>
-    Phone: {{phoneField.value}}
-    <input type="tel" formControlName="phone">
-  </p>
-    <div class="messages" [class.active]="phoneField.touched && phoneField.invalid">
-    <p>
-      <strong *ngIf="phoneField.touched && phoneField.hasError('required') ">Este campo es requerido</strong>
-    </p>
-    </div>
+  <mat-form-field appearance="fill">
+    <mat-label>{{emailField.value}}</mat-label>
+    <input matInput type="email" formControlName="email">
+    <mat-icon matSuffix *ngIf="isEmailFieldValid">done</mat-icon>
+    <mat-icon matSuffix *ngIf="isEmailFieldInvalid">close</mat-icon>
+    <mat-error *ngIf="emailField.hasError('required')" >Este campo es requerido</mat-error>
+    <mat-error *ngIf="emailField.hasError('email') ">El correo es inválido</mat-error>
+  </mat-form-field>
 
-  <p>
-    Color: {{colorField.value}}
-    <input type="color" formControlName="color">
-  </p>
-  <p>
-    Date: {{dateField.value}}
-    <input type="date" formControlName="date">
-  </p>
-  <p>
-    Age: {{ageField.value}}
-    <input type="number" formControlName="age">
-  </p>
-    <div class="messages" [class.active]="ageField.touched && ageField.invalid">
-    <p>
-      <strong *ngIf="ageField.hasError('required') ">Este campo es requerido</strong>
-    </p>
-    <p>
-      <strong *ngIf="ageField.hasError('min') ">Debe ser mayor de edad</strong>
-    </p>
-    <p>
-      <strong *ngIf="ageField.hasError('max') ">Debe ser menor de 100 años</strong>
-    </p>
-    </div>
+  <mat-form-field appearance="fill">
+    <mat-label>{{phoneField.value}}</mat-label>
+    <input matInput type="tel" formControlName="phone">
+    <mat-icon matSuffix *ngIf="isPhoneFieldValid">done</mat-icon>
+    <mat-icon matSuffix *ngIf="isPhoneFieldInvalid">close</mat-icon>
+    <mat-error *ngIf="phoneField.hasError('required')" >Este campo es requerido</mat-error>
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>{{colorField.value}}</mat-label>
+    <input matInput type="color" formControlName="color">
+  </mat-form-field>
+
+  <mat-form-field color="accent" appearance="fill">
+    <mat-label>{{dateField.value}}</mat-label>
+    <input matInput [matDatepicker]="picker2" formControlName="date">
+    <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+    <mat-datepicker #picker2 color="primary"></mat-datepicker>
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>{{ageField.value}}</mat-label>
+    <input matInput type="number" formControlName="age">
+    <mat-icon matSuffix *ngIf="isAgeFieldValid">done</mat-icon>
+    <mat-icon matSuffix *ngIf="isAgeFieldInvalid">close</mat-icon>
+    <mat-error *ngIf="ageField.hasError('required')" >Este campo es requerido</mat-error>
+    <mat-error *ngIf="ageField.hasError('min') ">Debe ser mayor de edad</mat-error>
+    <mat-error *ngIf="ageField.hasError('max') ">Debe ser menor de 100 años</mat-error>
+  </mat-form-field>
+
   <p>
     Range: {{rangeField.value}}
     <input type="range" formControlName="range">
@@ -112,9 +93,10 @@
       <option value="Tag_5">Tag 5</option>
     </select>
   </p>
+
   <p>
     Agree: {{agreeField.value}}
-    <input type="Checkbox" formControlName="agree">
+    <mat-checkbox formControlName="agree"></mat-checkbox>
   </p>
   <p>
     Gender: {{genderField.value}}
@@ -143,5 +125,5 @@
   </p>
 
 </form>
-
+</mat-card>
 
